--- a/Clase_GitHub/index.html
+++ b/Clase_GitHub/index.html
@@ -9,6 +9,7 @@
 
     <h1>Estamos trabajando en Git y GitHub</h1>
     <h6>commit</h6>
+    <p>El commit sirve para añadir descripcion al paquete de cambios que queremos enviar</p>
 
 
 
