--- a/Clase_GitHub/index.html
+++ b/Clase_GitHub/index.html
@@ -11,7 +11,7 @@
     <h6>commit</h6>
     <p>El commit sirve para añadir descripcion al paquete de cambios que queremos enviar</p>
     <h3>git status</h3>
-    <h2>dfsfddfgsdfsd</h2>
+    <h2>modificacion</h2>
 
 
 
